# parallel_prog

./: .gitignore  CMakeLists.txt  README.md  analytics.py  generate.py  main.cpp  main2.cpp  main3.cpp  matrix_final.cu  pict_from_csv.py  plot_from_csv.py  results.csv  results.txt  results_mpi.csv  results_parallel.csv  verify.py
